# expensiu

./: .gitignore  CMakeLists.txt  README.md  app.json  expo-tmp.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/expensi/uaapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: _layout.tsx  add.tsx  import.tsx  index.tsx  lock.tsx  settings.tsx  summary.tsx
app/onboarding/: index.tsx  model-download.tsx  permissions.tsx  questionnaire.tsx  welcome.tsx
components/: PremiumAlert.tsx  themeToggle.tsx
constants/: currencies.ts  keywords.ts  theme.ts
db/: database.ts
hooks/: useTheme.ts  useTransactions.ts
ios/: Podfile
ios/ExpensiU/: Info.plist
services/: aiEngine.ts  currencyDetector.ts  deduplicator.ts  exchangeRateService.ts  notificationEngine.ts  notificationListener.ts  securityService.ts  smsParser.ts  statementImporter.ts
src/: android-sms-parsing.cpp
src/android/: smsParserNative.cpp  smsParserNative.h
types/: declarations.d.ts  index.ts
utils/: mathUtils.ts
